--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
 </head>
 
 <body>
+    <!-- プチシェリー -->
+    <!-- <div id="wrapper">
+        <div class="items2"></div>
+        <div class="items1"></div>
+        <div class="items1"></div>
+        <div class="items1"></div>
+        <div class="items1"></div>
+    </div> -->
 
-
-
+    <!-- ビターオレンジ 
     <div id="wrapper">
         <div class="items1"></div>
         <div class="items2"></div>
+    </div> -->
+
+    <div id="wrapper">
+        <div class="items1"></div>
     </div>
+
     <div id="animebtn"><input type="button" id="btn">button</div>
 
     <script src="lib/anime.js"></script>
