--- a/index.html
+++ b/index.html
@@ -5,32 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>AnimationSample</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- プチシェリー -->
-    <!-- <div id="wrapper">
-        <div class="items2"></div>
-        <div class="items1"></div>
-        <div class="items1"></div>
-        <div class="items1"></div>
-        <div class="items1"></div>
-    </div> -->
-
-    <!-- ビターオレンジ 
-    <div id="wrapper">
-        <div class="items1"></div>
-        <div class="items2"></div>
-    </div> -->
 
     <div id="wrapper">
-        <div class="items1"></div>
     </div>
 
-    <div id="animebtn"><input type="button" id="btn">button</div>
 
+    <div id="color">
+        <div id="red"></div>
+        <div id="pink"></div>
+        <div id="parple"></div>
+        <div id="parpleblue"></div>
+        <div id="blue"></div>
+        <div id="lightblue"></div>
+        <div id="green"></div>
+        <div id="yellow"></div>
+        <div id="orange"></div>
+    </div>
     <script src="lib/anime.js"></script>
     <script src="index.js"></script>
 </body>
